# xKV

./: .gitignore  .gitmodules  README.md  eval_perplexity_rnn.py  pyproject.toml  requirements.txt  test_checkpoint_saving.py  utils.py
configs/: example_xkv_config.yaml
evaluate/: eval_acc.py  evaluator.py
evaluate/data/: dataset.py
evaluate/data/ruler/: create_dataset.sh  prepare.py  synthetic.yaml
evaluate/data/ruler/synthetic/: constants.py  niah_multiturn.py
examples/: example_loss_to_perplexity.py
lightning_logs/version_0/: hparams.yaml  metrics.csv
scripts/: cka_similarity_analysis.ipynb  get_multiturn_scores.py  train_conv.py  train_dual1d_lightning.py  train_vae_conv.py
src/: block_rnn_wrapper.py  kv_cache_collector.py  kv_dataset.py  kv_lightning_module.py  patch_model.py
src/compressors/: compressor.py  identity_compressor.py
src/utils/: kv_visualizer.py  loss_to_perplexity.py
tests/: test_checkpoint_saving.py  test_patch_model.py
train/: __init__.py  eval_perplexity_rnn_trained.py  kv_cache_collector.py  kv_lightning_module.py  model.py  train_conv.py  train_dual1d_lightning.py  train_vae_conv.py  utils.py
xKV/: configurations.py
xKV/attn_patch/: llama.py  mistral.py  qwen.py
xKV/customized_cache/: fake_layer_merge_dynamic_cache.py
